--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,5 @@
+
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -11,7 +13,12 @@
  * It is generally better to create a new file per style scope.
  *
 
+ *= require_tree .
+ *= require_self
+ *= require bootstrap-modal-bs3patch
+ *= require bootstrap-modal
  */
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+ @import "studies";
