Made employee new form. With dropdown menu of managers to choose from

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
  *= require_self
  *= require bootstrap-modal-bs3patch
  *= require bootstrap-modal
+ *=require bootstrap-select
  */
 
  @import "bootstrap-sprockets";
