--- a/app/views/links/_manager.html.erb
+++ b/app/views/links/_manager.html.erb
@@ -3,7 +3,7 @@
    <h3 id="myModalLabel">Manager Sign Up Link</h3>
  </div>
  <div class="modal-body">
-
+   Send this sign up link to the managers you want to participate in the study.
 
     <div class="form-group">
       <input type="text" class="form-control" id="link-display" >
