--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -3,14 +3,17 @@
 
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-      <h1>Sign Up</h1>
+      <h1>New Employee </h1>
+      <p>
+        For: <%= @company %>
+      </p>
       <%= @employee.errors.full_messages.join(', ') %>
       <%= form_tag('/employees', method: "Post") %>
         <div class="form-group">
           <%= label_tag :manager %>
           <%= select_tag(
             :manager,
-            options_from_collection_for_select(Manager.all, :id, :full_name),
+            options_from_collection_for_select(@managers, :id, :full_name),
 
             { 'data-width' => "100%",
               :class => "selectpicker",
