Made manager field required

--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -18,7 +18,8 @@
             { 'data-width' => "100%",
               :class => "selectpicker",
               'data-live-search' => true,
-              'title' => "Choose your manager"}) %>
+              'title' => "Choose your manager",
+              required: true}) %>
 
         </div>
 
