Add Matrix question type. Delete mc_Question model. Create Question model with kind column.

--- a/app/views/manager_surveys/_matrix_question_fields.html.erb
+++ b/app/views/manager_surveys/_matrix_question_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
-  <%= f.label "MC Question Body" %>
-  <%= f.text_field :kind, value: "mc", class: "hidden"%>
+  <%= f.label :Matrix_question_body %>
+  <%= f.text_field :kind, value: "matrix", class: "hidden"%>
   <%= f.text_field :body, class: "form-control" %>
   <%= link_to_remove_association "Remove Question", f %>
     <hr />
