added checklist question type

--- a/app/views/manager_surveys/_checklist_question_fields.html.erb
+++ b/app/views/manager_surveys/_checklist_question_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
-  <%= f.label "MC Question Body" %>
-  <%= f.text_field :kind, value: "mc", class: "hidden"%>
+  <%= f.label "Checklist Question Body" %>
+  <%= f.text_field :kind, value: "checklist", class: "hidden"%>
   <%= f.text_field :body, class: "form-control" %>
 
 
