--- a/app/views/manager_surveys/_checklist_question_fields.html.erb
+++ b/app/views/manager_surveys/_checklist_question_fields.html.erb
@@ -1,10 +1,13 @@
 <div class="nested-fields">
+
   <%= f.label "Checklist Question Body" %>
   <%= f.text_field :kind, value: "checklist", class: "hidden"%>
   <%= f.text_field :body, class: "form-control" %>
 
-
-
   <%= link_to_remove_association "Remove Question", f %>
-    <hr />
+  <%= link_to_add_association 'Add Check Item', f, :responses, partial: 'manager_surveys/responses/checklist_response_fields',
+  'data-association-insertion-method' => 'append'
+  %>
+
+  <hr />
 </div>
