Added event listeners to checkbox response add

--- a/app/views/manager_surveys/responses/_checklist_response_fields.html.erb
+++ b/app/views/manager_surveys/responses/_checklist_response_fields.html.erb
@@ -1,6 +1,7 @@
 
 <div class="checkbox">
+
     <label>
-        <%= f.check_box :content, class: "checkbox"%>
+        <%= f.check_box :content, class: "checkbox"%> <%= text_field_tag 'data-field', nil, class: "form-control" %>
     </label>
   </div>
