--- a/app/views/manager_surveys/_checklist_question_fields.html.erb
+++ b/app/views/manager_surveys/_checklist_question_fields.html.erb
@@ -1,13 +1,24 @@
-<div class="nested-fields">
+<div class="checkbox-container" >
 
   <%= f.label "Checklist Question Body" %>
   <%= f.text_field :kind, value: "checklist", class: "hidden"%>
   <%= f.text_field :body, class: "form-control" %>
 
   <%= link_to_remove_association "Remove Question", f %>
-  <%= link_to_add_association 'Add Check Item', f, :responses, partial: 'manager_surveys/responses/checklist_response_fields',
-  'data-association-insertion-method' => 'append'
+  <%= link_to_add_association'Add Check Item', f, :responses, partial: 'manager_surveys/responses/checklist_response_fields',
+  'data-association-insertion-method' => 'append', class: "test"
   %>
 
   <hr />
 </div>
+
+<script>
+
+$('.checkbox-container').on('cocoon:after-insert', function(e, insertedItem) {
+  console.log(e)
+  console.log(insertedItem)
+  // var value = $('#data-field').last()val()
+  // $('input[type="checkbox"]').last()val(value)
+});
+
+</script>
