Add MC question options w/ associatons. Add route for manager_survey #show

--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -91,8 +91,9 @@
 
               <%= link_to "Generate Manager Sign Up Link", manager_link_path(study: @study), class: "btn btn-default", method: :get, remote: true, data: { toggle: "modal", target: "#modal-window" }%>
               <%= link_to "Create Manager Form", new_study_manager_survey_path(@study), class: "btn btn-default", method: :get %>
+              <%= link_to "View Manager Form", study_manager_survey_path(@study, @study.manager_survey), class: "btn btn-default", method: :get %>
 
-              <button class="btn btn-default">Create Manager Form</button>
+
               <button class="btn btn-default"> View/Edit Manager Form</button>
             </div>
 
