--- a/app/views/manager_surveys/_matrix_question_fields.html.erb
+++ b/app/views/manager_surveys/_matrix_question_fields.html.erb
@@ -1,8 +1,7 @@
-<div class="nested-fields">
+<div class="matrix-container">
   <hr />
   <%= f.label :Matrix_question_body %>
   <%= f.text_field :kind, value: "matrix", class: "hidden"%>
   <%= f.text_field :body, class: "form-control" %>
-  <%= link_to_remove_association "Remove Question", f %>
-    <hr />
+  <%= link_to_remove_association "Remove Question", f, wrapper_class: 'matrix-container' %>
 </div>
