--- a/app/views/manager_surveys/new.html.erb
+++ b/app/views/manager_surveys/new.html.erb
@@ -13,6 +13,6 @@
       <%= link_to_add_association 'Add Checklist Question', f, :questions, partial: 'manager_surveys/checklist_question_fields' %>
   </div>
 
-  <%= f.submit %>
+  <%= f.submit class: "btn btn-default" %>
 
 <% end %>
