--- a/app/views/manager_surveys/options/_checklist_option_fields.html.erb
+++ b/app/views/manager_surveys/options/_checklist_option_fields.html.erb
@@ -1,7 +1,8 @@
 
 <div class="checkbox">
-
     <label>
-        <%= check_box_tag  class: "checkbox"%> <%= f.text_field :content,  class: "form-control" %>
+      <%= check_box_tag  class: "checkbox"%> <%= f.text_field :content,  class: "form-control" %>
     </label>
+
+    <%= link_to_remove_association "Remove", f, wrapper_class: 'checkbox' %>
   </div>
