--- a/app/assets/stylesheets/manager_surveys.scss
+++ b/app/assets/stylesheets/manager_surveys.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the manager_surveys controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.mc-options {
+  padding-left: 20px;
+  padding-top: 10px;
+}
+.checklist-options {
+  padding-left: 20px;
+  padding-top: 10px;
+}
