--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -24,6 +24,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th># of Employees</th>
+            <th># of Entries</th>
           </tr>
         </thead>
         <tbody>
@@ -35,6 +36,7 @@
             <td> <%= mgr.first_name %>   </td>
             <td> <%= mgr.last_name %>   </td>
             <td> <%= mgr.employees.count %>   </td>
+            <td> <%= mgr.entries.count %>   </td>
           </tr>
 
           <% end %>
@@ -57,6 +59,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Manager</th>
+            <th># of Entries</th>
           </tr>
         </thead>
         <tbody>
@@ -68,6 +71,7 @@
             <td> <%= emp.first_name %>   </td>
             <td> <%= emp.last_name %>   </td>
             <td> <%= emp.manager.full_name %>   </td>
+            <td> <%= emp.entries.count %>   </td>
           </tr>
 
           <% end %>
