moved remove link for matrix

--- a/app/views/manager_surveys/options/_matrix_option_fields.html.erb
+++ b/app/views/manager_surveys/options/_matrix_option_fields.html.erb
@@ -4,6 +4,11 @@
     <td><input type="radio"/></td>
     <td><input type="radio"/></td>
     <td><input type="radio"/></td>
+    <td><input type="radio"/></td>
+    <td><input type="radio"/></td>
+    <td><input type="radio"/></td>
+    <td>
+      <%= link_to_remove_association "Remove", f, wrapper_class: 'matrix-option' %>
+  
+    </td>
   </tr>
-
-    <%= link_to_remove_association "Remove", f, wrapper_class: 'matrix-option' %>
