Add some style to manager_survey #new view

--- a/app/assets/stylesheets/manager_surveys.scss
+++ b/app/assets/stylesheets/manager_surveys.scss
@@ -10,3 +10,22 @@
   padding-left: 20px;
   padding-top: 10px;
 }
+
+.mc-container {
+  .radio {
+    padding-left: 10%;
+  }
+  label {
+    width: 75%;
+  }
+}
+
+.checkbox-container {
+
+  .checkbox {
+    padding-left: 10%;
+  }
+  label {
+    width: 75%;
+  }
+}
