--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,33 +24,19 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="mhapp-navbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li>
 
-        </ul>
 
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">HELLO <%= current_user.full_name %></a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Sign Out", new_session_path, method: :delete %></li>
-                <li><%= link_to "Sign UP", new_user_path %></li>
-              </ul>
-            </li>
+            <li><a href="#">Hello, <%= current_user.full_name %></a></li>
+            <li><%= link_to "Sign Out", new_session_path, method: :delete %></li>
+
           </ul>
         <% else %>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Sign IN", new_session_path %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign Up <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Researcher", new_researcher_path %></li>
-                <li><%= link_to "Participant", new_user_path %></li>
-              </ul>
-            </li>
+            <li><%= link_to "Sign In", new_session_path %></li>
+            <li><%= link_to "Sign Up", new_researcher_path %></li>
+          
 
           </ul>
         <% end %>
