--- a/app/views/manager_surveys/_mc_question_fields.html.erb
+++ b/app/views/manager_surveys/_mc_question_fields.html.erb
@@ -1,14 +1,20 @@
 <div class="mc-container">
   <hr />
-  <%= f.label "MC Question Body" %>
-  <%= f.text_field :kind, value: "mc", class: "hidden"%>
-  <%= f.text_field :body, class: "form-control" %>
+  <div class="panel panel-default">
+
+    <div class="panel-body">
+
+      <%#= f.label "MC Question Body" %>
+      <%= f.text_field :kind, value: "mc", class: "hidden"%>
+      <%= f.text_field :body, class: "form-control", placeholder: "Multiple Choice Question Body Here" %>
+
+      <br />
+      <%= link_to_add_association'Add MC Response', f, :options, partial: 'manager_surveys/options/mc_option_fields',
+      'data-association-insertion-method' => 'append', class: 'btn btn-default'
+      %>
 
 
-  <%= link_to_add_association'Add MC Response', f, :options, partial: 'manager_surveys/options/mc_option_fields',
-  'data-association-insertion-method' => 'append'
-  %>
-
-
-  <%= link_to_remove_association "Remove Question", f, wrapper_class: 'mc-container' %>
+      <%= link_to_remove_association "Remove Question", f, wrapper_class: 'mc-container', class: 'btn btn-default' %>
+    </div>
+  </div>
 </div>
