--- a/app/views/manager_surveys/new.html.erb
+++ b/app/views/manager_surveys/new.html.erb
@@ -4,9 +4,17 @@
 
     <% @study = params['study_id'].to_i %>
     <%= simple_form_for (@manager_survey), :url => study_manager_surveys_path(@study) do |f|%>
-    <div class="form-group">
-      <%= f.label :form_name %>
-      <%= f.text_field :form_name, class: "form-control" %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Form Name</h3>
+      </div>
+      <div class="panel-body">
+
+        <div class="form-group">
+          <%#= f.label :form_name %>
+          <%= f.text_field :form_name, class: "form-control" %>
+        </div>
+      </div>
     </div>
 
     <div class="form">
@@ -19,7 +27,7 @@
 
   </div>
 
-  <div class="col-sm-3 ">
+  <div class="col-sm-3 sidebar-wrapper">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
@@ -27,12 +35,12 @@
         </h3>
       </div>
       <div class="panel-body">
-        <div class="btn-group-vertical">
+        <div class="btn-group-vertical" style="width: 100%">
 
-          <%= link_to_add_association 'Add Matrix Question', f, :questions, partial: 'manager_surveys/matrix_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default'%>
 
           <%= link_to_add_association 'Add MC Question', f, :questions, partial: 'manager_surveys/mc_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' %>
           <%= link_to_add_association 'Add Checklist Question', f, :questions, partial: 'manager_surveys/checklist_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' %>
+          <%= link_to_add_association 'Add Matrix Question', f, :questions, partial: 'manager_surveys/matrix_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default', width: '100%'%>
         </div>
       </div>
     </div>
