Add associations and EmployeeSurvey model

--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -79,7 +79,7 @@
       </table>
     </div>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-4 sidebar-wrapper">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
@@ -95,8 +95,11 @@
 
               <%= link_to "Generate Manager Sign Up Link", manager_link_path(study: @study), class: "btn btn-default", method: :get, remote: true, data: { toggle: "modal", target: "#modal-window" }%>
               <%= link_to "Create Manager Form", new_study_manager_survey_path(@study), class: "btn btn-default", method: :get %>
-              <%= link_to "View Manager Form", study_manager_survey_path(@study, @study.manager_survey), class: "btn btn-default", method: :get %>
-
+              <% if @study.manager_survey.present? %>
+                <%= link_to "View Manager Form", study_manager_survey_path(@study, @study.manager_survey), class: "btn btn-default", method: :get %>
+              <% else %>
+                <%= link_to "View Manager Form", new_study_manager_survey_path(@study), class: "btn btn-default disabled", method: :get %>
+              <% end %>
 
               <button class="btn btn-default"> View/Edit Manager Form</button>
             </div>
@@ -104,9 +107,15 @@
 
             <div class="btn-group-vertical" style="width: 100%;">
               <%= link_to "Generate Employee Sign Up Link", employee_link_path(study: @study), class: "btn btn-default", method: :get, remote: true, data: { toggle: "modal", target: "#modal-window" }%>
+              <%= link_to "Create Employee Form", new_study_employee_survey_path(@study), class: "btn btn-default", method: :get %>
+              <% if @study.employee_survey.present? %>
+                <%= link_to "View Employee Form", study_employee_survey_path(@study, @study.employee_survey), class: "btn btn-default", method: :get %>
+              <% else %>
+                <%= link_to "View Employee Form", new_study_employee_survey_path(@study), class: "btn btn-default disabled", method: :get %>
+              <% end %>
 
-              <button class="btn btn-default">Create Employee Form</button>
-              <button class="btn btn-default"> View/Edit Employee Form</button>
+
+
             </div>
 
 
