--- a/app/views/manager_surveys/_matrix_question_fields.html.erb
+++ b/app/views/manager_surveys/_matrix_question_fields.html.erb
@@ -1,31 +1,21 @@
+
+
 <div class="matrix-container">
   <hr />
-  <div class="row">
-    <div class="col-sm-10" id="matrix-content">
-      <%#= f.label :Matrix_question_body %>
-      <%= f.text_field :kind, value: "matrix", class: "hidden"%>
-      <%= f.text_field :body, class: "form-control", placeholder: "body of matrix question here" %>
-      <table>
-        <thead>
-          <tr>
-            <th>Place Holder 1</th>
-            <th>Place Holder 2</th>
-            <th>Place Holder 3</th>
-          </tr>
-        </thead>
+  <div class="panel panel-default">
 
-      </table>
+    <div class="panel-body">
 
-    </div>
+      <%#= f.label "MC Question Body" %>
+      <%= f.text_field :kind, value: "mc", class: "hidden"%>
+      <%= f.text_field :body, class: "form-control", placeholder: "Multiple Choice Question Body Here" %>
 
-    <div class="col-sm-2">
-
-      <%= link_to_add_association'+ Row', f, :options, partial: 'manager_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append',
-      'data-association-insertion-node' => 'table'
+      <br />
+      <%= link_to_add_association'+ Row', f, :options, partial: 'manager_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append'
       %>
 
-      <%= link_to_remove_association "Remove Question", f, wrapper_class: 'matrix-container' %>
+
+      <%= link_to_remove_association "Remove Question", f, wrapper_class: 'matrix-container', class: 'btn btn-default' %>
     </div>
   </div>
-
 </div>
