--- a/app/views/manager_surveys/options/_matrix_option_fields.html.erb
+++ b/app/views/manager_surveys/options/_matrix_option_fields.html.erb
@@ -1,14 +1,7 @@
-
-
-  <tr class="matrix-option">
-    <td><input type="radio"/></td>
-    <td><input type="radio"/></td>
-    <td><input type="radio"/></td>
-    <td><input type="radio"/></td>
-    <td><input type="radio"/></td>
-    <td><input type="radio"/></td>
-    <td>
-      <%= link_to_remove_association "Remove", f, wrapper_class: 'matrix-option' %>
-  
-    </td>
-  </tr>
+<div class="matrix-option">
+  <label class="radio-inline"> <input type="radio" >1</label>
+  <label class="radio-inline"> <input type="radio" >2</label>
+  <label class="radio-inline"> <input type="radio" >3</label>
+  <label class="radio-inline"> <input type="radio" > 4</label>
+  <%= link_to_remove_association "Remove", f, wrapper_class: 'matrix-option', class: 'btn btn-default' %>
+</div>
