--- a/app/assets/stylesheets/manager_surveys.scss
+++ b/app/assets/stylesheets/manager_surveys.scss
@@ -3,17 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .mc-options {
-  padding-left: 20px;
   padding-top: 10px;
 }
 .checklist-options {
-  padding-left: 20px;
   padding-top: 10px;
 }
 
 .mc-container {
   .radio {
-    padding-left: 10%;
+    padding-left: 7%;
   }
   label {
     width: 75%;
@@ -21,9 +19,8 @@
 }
 
 .checkbox-container {
-
   .checkbox {
-    padding-left: 10%;
+    padding-left: 7%;
   }
   label {
     width: 75%;
@@ -31,6 +28,10 @@
 }
 
 .matrix-option {
-  padding: 20px;
-
+  padding-left: 7% ;
+  padding-top: 10px;
+  .form-control {
+    display: inline;
+    width: 60%;
+  }
 }
