--- a/app/views/manager_surveys/options/_matrix_option_fields.html.erb
+++ b/app/views/manager_surveys/options/_matrix_option_fields.html.erb
@@ -1,7 +1,11 @@
 <div class="matrix-option">
-  <label class="radio-inline"> <input type="radio" >1</label>
-  <label class="radio-inline"> <input type="radio" >2</label>
-  <label class="radio-inline"> <input type="radio" >3</label>
-  <label class="radio-inline"> <input type="radio" > 4</label>
-  <%= link_to_remove_association "Remove", f, wrapper_class: 'matrix-option', class: 'btn btn-default' %>
+  <div class="form-group">
+    <input type="text" class="form-control"  placeholder="Matrix Option Text Here">
+      <label class="radio-inline"> <input name="x" type="radio" >1</label>
+      <label class="radio-inline"> <input name="x"  type="radio" >2</label>
+      <label class="radio-inline"> <input name="x" type="radio" >3</label>
+      <label class="radio-inline"> <input name="x" type="radio" > 4</label>
+      <label class="radio-inline"> <input name="x" type="radio" > 5</label>
+    <%= link_to_remove_association "Remove", f, wrapper_class: 'matrix-option', class: 'btn btn-default' %>
+  </div>
 </div>
