Made table styling for matrix look dope in manager show

--- a/app/assets/stylesheets/manager_surveys.scss
+++ b/app/assets/stylesheets/manager_surveys.scss
@@ -36,3 +36,13 @@
   }
 
 }
+
+#matrix-table{
+    table-layout: fixed;
+    td:first-child {
+      width: 30%;
+    }
+    td:last-child {
+      width: 70%;
+    }
+}
