got basic download of xlsx working

--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -92,6 +92,7 @@
             <div class="btn-group-vertical" style="width: 100%;">
 
 
+              <%= link_to 'Excel Download last mgr', manager_download_path(@manager, :format => :xlsx) %>
               <%= link_to "Generate Manager Sign Up Link", manager_link_path(study: @study), class: "btn btn-default", method: :get, remote: true, data: { toggle: "modal", target: "#modal-window" }%>
               <%= link_to "Create Manager Form", new_study_manager_survey_path(@study), class: "btn btn-default", method: :get %>
               <% if @study.manager_surveys.present? %>
