Refactor excel download to downloads controller. Made associations between entries and both manager_surveys and employee_surveys

--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -24,6 +24,7 @@
             <th>Last Name</th>
             <th># of Employees</th>
             <th># of Entries</th>
+            <th> Actions </th>
           </tr>
         </thead>
         <tbody>
@@ -36,6 +37,7 @@
             <td> <%= mgr.last_name %>   </td>
             <td> <%= mgr.employees.count %>   </td>
             <td> <%= mgr.entries.count %>   </td>
+            <td> <%= link_to "Download", ind_manager_download_path(mgr.id, :format => :xlsx) %></td>
           </tr>
 
           <% end %>
@@ -92,7 +94,7 @@
             <div class="btn-group-vertical" style="width: 100%;">
 
 
-              <%= link_to 'Excel Download last mgr', manager_download_path(@manager, :format => :xlsx) %>
+              <%= link_to 'Excel Download last mgr', ind_manager_download_path(@manager, :format => :xlsx) %>
               <%= link_to "Generate Manager Sign Up Link", manager_link_path(study: @study), class: "btn btn-default", method: :get, remote: true, data: { toggle: "modal", target: "#modal-window" }%>
               <%= link_to "Create Manager Form", new_study_manager_survey_path(@study), class: "btn btn-default", method: :get %>
               <% if @study.manager_surveys.present? %>
@@ -127,7 +129,7 @@
 </div>
 
 
-  <script>
+  <!-- <script>
     $("tr[data-link]").click(function() {
       window.location = $(this).data("link")
     })
@@ -138,4 +140,4 @@
 
 
 
-  </script>
+  </script> -->
